--- a/assets/css/widget.css
+++ b/assets/css/widget.css
@@ -22,3 +22,16 @@
     opacity: 0;
   }
 }
+
+.error {
+  background-color: #000a;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 20px;
+  border-left: 10px solid #A56EF9;
+}
+
+.error > h1,
+.error > b {
+  color: #A56EF9;
+}
